# Server

./: CMakeLists.txt  Makefile  README.md  check_ip.c  client.c  main.c  network.c  network.h  server.c  test_select.c
client/: CMakeLists.txt  client.c
server/: CMakeLists.txt  server.c
src/: client.c  network.c  network.h  server.c
